--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 REACT_APP_API_URL=https://61db934b4593510017aff90c.mockapi.io/api/shop-app
+REACT_APP_FIRE_BASE_API_KEY=AIzaSyBzF3L-eAd53BBwFLERvW6U0OQNGaRuwDw
